<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="5"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:id="@+id/menu_sort_title"
        android:title="@string/menu_sort_by_title"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_sort_rating"
        android:title="@string/menu_sort_by_rating"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_add_remove_library"
        android:title="@string/menu_add_to_library"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_update_series"
        android:title="@string/menu_update"
        app:showAsAction="never"
        />
</menu>