<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/login_logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_description_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/login_app_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_app_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:text="@string/app_name"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        app:layout_constraintBottom_toTopOf="@+id/login_username_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo_image"
        style="@style/AppNameStyle" />

    <EditText
        android:id="@+id/login_username_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:hint="@string/username"
        android:lines="@integer/edit_single_line"
        android:maxLines="@integer/edit_single_line"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/login_password_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_app_name_text" />

    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_edit" />

    <Button
        android:id="@+id/login_sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/login"
        android:textAllCaps="true"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/login_or_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edit" />

    <TextView
        android:id="@+id/login_or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/or"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/login_google_sign_in"
        app:layout_constraintEnd_toStartOf="@+id/login_right_divider"
        app:layout_constraintStart_toEndOf="@+id/login_left_divider"
        app:layout_constraintTop_toBottomOf="@+id/login_sign_in_button" />

    <View
        android:id="@+id/login_left_divider"
        android:background="@color/colorPrimaryLight"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="@+id/login_or_text"
        app:layout_constraintEnd_toStartOf="@+id/login_or_text"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_or_text" />

    <View
        android:id="@+id/login_right_divider"
        android:background="@color/colorPrimaryLight"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_margin="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="@+id/login_or_text"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_or_text"
        app:layout_constraintTop_toTopOf="@+id/login_or_text" />

    <Button
        android:id="@+id/login_google_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/google_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_or_text" />
</android.support.constraint.ConstraintLayout>
